--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Am trying to toggle up</h1>
-    <div class="flex flex-col space-y-12 m-auto max-w-5xl mt-12">
-        <div class="flex justify-end items-cente space-x-2">
-            <span class="text-sm text-gray-800">Light</span>
-          <div>
-            <input type="checkbox"id="toggle"class="hidden">
-            <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
-             <div class="w-4 h-4 bg-white rounded-full shadow-orange-50 shadow-md"></div>
-            </div>
-          </div>
-          <span class="text-sm text-gray-400">Dark</span>
-        </div>
+    <div class="p-8">
+        <label for="check" class="flex bg-gray-100 cursor-pointer relative w-20 h-10 rounded-full">
+            <input type="checkbox" id="check" class="sr-only peer"/>
+            <span class="w-2/5 h-4/5 bg-rose-300 absolute rounded-full left-1 top-1 peer-checked:left-11 peer-checked:bg-rose-600 transition-all duration-200 "></span>
+        </label>
     </div>
-   
 </body>
 </html>
